@startuml
class Rapor {
- JTable table
- JRadioButton addRadioButton
- JRadioButton updateRadioButton
- JRadioButton deleteRadioButton
- JTextField emailField
- JPasswordField passwordField
- JTextField namaField
- JCheckBox namaCheck
- JComboBox<DataSiswa.Kelas> kelasField
- JCheckBox kelasCheck
- JComboBox<Integer> rombelField
- JCheckBox rombelCheck
- JComboBox semesterField
- JCheckBox semesterCheck
- JTextField commentField
- JCheckBox commentCheck
- JPasswordField newPasswordField
- JCheckBox newPasswordCheck
- JCheckBox newEmailCheck
- JTextField newEmailField
- JButton submitButton
- JPanel mainPanel
- JPanel leftPanel
- JPanel operationPanel
- JPanel formPanel
- JPanel submitPanel
- JPanel rightPanel
- JScrollPane tableScrollPane
- JLabel emailLabel
- JLabel passwordLabel
- JLabel namaLabel
- JLabel kelasLabel
- JLabel rombelLabel
- JLabel semesterLabel
- JLabel commentLabel
- JLabel newEmailLabel
- JLabel newPasswordLabel
- JCheckBox passwordCheck
- JCheckBox emailCheck
- JPasswordField passwordConfirmField
- JCheckBox passwordConfirmCheck
- JLabel passwordConfirmLabel
- DefaultTableModel dm
- String[] columnNames
~ OperationState state
+ <<Create>> Rapor()
- void setObjectEnable(JCheckBox,boolean,boolean)
- void createCheckListener(JComponent,JLabel,JCheckBox)
- void updateFormState(OperationState)
- void createRadioListener(JRadioButton,OperationState)
- void createKelasListener()
- void createValidatorListener()
- void createSubmitListener()
+ {static} void main(String[])
}
interface Rapor.SimpleDocumentListener {
~ void update(DocumentEvent)
~ void insertUpdate(DocumentEvent)
~ void removeUpdate(DocumentEvent)
~ void changedUpdate(DocumentEvent)
}


JFrame <|-- Rapor
Rapor +.. Rapor.SimpleDocumentListener
DocumentListener <|-- Rapor.SimpleDocumentListener
@enduml